--- a/pages/todolist.html
+++ b/pages/todolist.html
@@ -17,7 +17,7 @@
     <div class="header">
         <div class="header-inner">
             <h1>Oral Care for Infants (OCFI)
-                <span><a href="#">English</a> | <a href="#">Español</a></span>
+                <span><a href="#">English</a> | <a href="../esp/todolist.html">Español</a></span>
             </h1>
             <p>An Educational Tool to Teach Pregnant and New Moms about Proper Dental Care for Their Newborn or Toddler </p>
         </div>
