--- a/esp/todolist.html
+++ b/esp/todolist.html
@@ -17,7 +17,7 @@
     <div class="header">
         <div class="header-inner">
             <h1>Oral Care for Infants (OCFI)
-                <span><a href="#">English</a> | <a href="#">Español</a></span>
+                <span><a href="../pages/todolist.html">English</a> | <a href="#">Español</a></span>
             </h1>
             <p>Un sito para enseñar a las mujeres embarazadas sobre la salud dental para sus infantes y hijos. </p>
         </div>
