--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="list hidden">
               <p><a href="./pages/2048.html">2048</a></p>
               <p><a href="infomys.herokuapp.com">Infomys Strength Tracker</a></p>
-              <p><a href="./mines/index.html">Minesweeper</a></p>
+              <p><a href="./miness/index.html">Minesweeper</a></p>
               <p><a href="tubegenius.herokuapp.com">TubeGenius</a></p>
             </div>
             <h5>Send me a <a href="mailto:amihalop@gmail.com" target="_top" class="media">message</a></h5>
