--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <h5 id="projects">Here are some <a href="#" id="project_link">projects I've worked on</a></h5>
             <div class="list hidden">
               <p><a href="./pages/2048.html">2048</a></p>
-              <p><a href="infomys.herokuapp.com">Infomys Strength Tracker</a></p>
+              <p><a href="http://infomys.herokuapp.com">Infomys Strength Tracker</a></p>
               <p><a href="./mines2/index.html">Minesweeper</a></p>
-              <p><a href="tubegenius.herokuapp.com">TubeGenius</a></p>
+              <p><a href="http://tubegenius.herokuapp.com">TubeGenius</a></p>
             </div>
             <h5>Send me a <a href="mailto:amihalop@gmail.com" target="_top" class="media">message</a></h5>
 
