--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="text-vertical-center">
             <h1>Alexei Mihalopoulos</h1>
             <h5>Full Stack Web Developer</h5>
-            <h5>Here is my <a href="pages/CV_MIHALOPOULOS.pdf" target="_blank">resume</a></h5>
+            <h5>Here is my <a href="pages/Alexei_Mihalopoulos_RESUME.pdf" target="_blank">resume</a></h5>
             <h5 id="projects">Here are some <a href="#" id="project_link">projects I've worked on</a></h5>
             <div class="list hidden">
               <p><a href="./pages/2048.html">2048</a></p>
