--- a/mines2/index.html
+++ b/mines2/index.html
@@ -11,6 +11,10 @@
   <title>Minesweeper</title>
 </head>
 <body>
+  <div id="clock">
+    <label id="minutes">00</label>:<label id="seconds">00</label>
+    <button id="refresh">:)</button>
+  </div>
   <div id="container"></div>
   <h1>Minesweeper</h1>
   <p>
