--- a/mines2/index.html
+++ b/mines2/index.html
@@ -13,7 +13,7 @@
 <body>
   <div id="clock">
     <label id="minutes">00</label>:<label id="seconds">00</label>
-    <button id="refresh">:)</button>
+    <button id="refresh"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-alP2iFlZDKLTmg2lfNYMWwGzvZWMMdVy82oFEL003HEA5yBp" id="face" alt=""></button>
   </div>
   <div id="container"></div>
   <h1>Minesweeper</h1>
