--- a/mines2/index.html
+++ b/mines2/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <link rel="stylesheet" href="./application.css">
-
+  <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="./game.js"></script>
   <script src="./application.js"></script>
@@ -11,8 +11,9 @@
   <title>Minesweeper</title>
 </head>
 <body>
-  <div id="clock">
-    <label id="minutes">00</label>:<label id="seconds">00</label>
+  <div id="score">
+    <div id="clock"><label id="minutes">00</label>:<label id="seconds">00</label></div>
+
     <button id="refresh"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-alP2iFlZDKLTmg2lfNYMWwGzvZWMMdVy82oFEL003HEA5yBp" id="face" alt=""></button>
   </div>
   <div id="container"></div>
