--- a/mines2/index.html
+++ b/mines2/index.html
@@ -11,6 +11,16 @@
   <title>Minesweeper</title>
 </head>
 <body>
+  <button name="radAnswer" id="beginner">Beginner</button>
+  <button name="radAnswer" id="intermediate">Intermediate</button>
+  <button name="radAnswer" id="expert">Expert</button>
+  <!--
+
+
+  Beginner: 8 × 8 or 9 × 9 field with 10 mines
+  Intermediate: 16 × 16 field with 40 mines
+  Expert: 30 × 16 field with 99 mines
+ -->
   <div id="score">
     <div id="clock"><label id="minutes">00</label>:<label id="seconds">00</label></div>
 
