--- a/mines2/index.html
+++ b/mines2/index.html
@@ -11,9 +11,9 @@
   <title>Minesweeper</title>
 </head>
 <body>
-  <button name="radAnswer" id="beginner">Beginner</button>
-  <button name="radAnswer" id="intermediate">Intermediate</button>
-  <button name="radAnswer" id="expert">Expert</button>
+  <button class="button" id="beginner">Beginner</button>
+  <button class="button" id="intermediate">Intermediate</button>
+  <button class="button" id="expert">Expert</button>
   <!--
 
 
