--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
             <img class="img" src="icons/infomys.png">
             <div class="bottom">
               <h4>Infomys</h4>
+              <h6>A workout recorder that graphically represents your calendar as well as your increase in strength. </h6>
+              <h6>Rails, ReactJS, Ajax, & CSS</h6>
+              <h4><a href="https://github.com/amihalopoulos/workout-tracker">source</a></h4>
+              <h4><a href="http://infomys.herokuapp.com">URL</a> </h4>
             </div>
           </div>
         </li>
@@ -75,6 +79,10 @@
             <img class="img" src="icons/tubgenius.png">
             <div class="bottom">
               <h4>TubeGenius</h4>
+              <h6>A video annotation site for youtube videos. </h6>
+              <h6>Rails, Ajax, PopcornJS, Foundation</h6>
+              <h4><a href="https://github.com/amihalopoulos/tubegenius">source</a></h4>
+              <h4><a href="http://tubegenius.herokuapp.com">URL</a> </h4>
             </div>
           </div>
         </li>
@@ -83,6 +91,10 @@
             <img class="img" src="icons/mines.png">
             <div class="bottom">
               <h4>Minesweeper</h4>
+              <h6>A clone of the only good classic Microsoft computer game. </h6>
+              <h6>Javascript, jQuery</h6>
+              <h4><a href="https://github.com/amihalopoulos/minesweeper">source</a></h4>
+              <h4><a href="http://amihalopoulos.github.io/mines2">URL</a> </h4>
             </div>
           </div>
         </li>
@@ -91,6 +103,10 @@
             <img class="img" src="icons/2048.png">
             <div class="bottom">
               <h4>2048</h4>
+              <h6>A clone of the puzzle game 2048. </h6>
+              <h6>Javascript, jQuery</h6>
+              <h4><a href="https://github.com/amihalopoulos/2048-clone">source</a></h4>
+              <h4><a href="http://amihalopoulos.github.io/pages/2048">URL</a> </h4>
             </div>
           </div>
         </li>
