--- a/index.html
+++ b/index.html
@@ -25,10 +25,23 @@
       <img src="icons/alexei-prof-black.png" class="prof">
         </li>
         <li><h1>Alexei Mihalopoulos</h1></li>
-        <li><h5>Full Stack Web Developer</h5>
-      <h5 id="projects">Here are some of my <a href="#" id="project_link">projects</a></h5>
-      <h5>Here is my <a href="pages/Alexei_Mihalopoulos_RESUME.pdf" target="_blank">resume</a></h5>
-      <h5>Send me a <a href="mailto:amihalop@gmail.com" target="_top" class="media">message</a></h5></li>
+        <li><div id="paragraph">
+          <h5>Full Stack Web Developer</h5>
+          <h5 id="projects">Here are some of my <a href="#" class="project_link">projects</a></h5>
+          <h5>Here is my <a href="pages/Alexei_Mihalopoulos_RESUME.pdf" target="_blank">resume</a></h5>
+          <h5>Send me a <a href="mailto:amihalop@gmail.com" target="_top" class="media">message</a></h5>
+          </div>
+        </li>
+        <li class="dropdown">
+          <!-- <div id="small-menu"> -->
+            <a href="#"><img src="icons/menu.png" alt=""></a>
+            <ul class="drop-nav">
+              <li><a href="#" class="project_link">projects</a></li>
+              <li><a href="pages/Alexei_Mihalopoulos_RESUME.pdf" target="_blank">resume</a></li>
+              <li><a href="mailto:amihalop@gmail.com" target="_top" class="media">message</a></li>
+            </ul>
+          <!-- </div> -->
+        </li>
         <li>      <div id="info">
           <!-- <a href="https://twitter.com/lextheboywonder" target="_blank" class='media'><img src="icons/twitter (1).png">
           </a> -->
@@ -48,8 +61,9 @@
 
     </div>
   </div>
+
   <div class="welcome-content">
-    <h1>welcome.</h1>
+    <h1>hello.</h1>
   </div>
   <div class="list">
     <!-- <p><a href="./pages/2048.html">2048</a></p>
