--- a/index.html
+++ b/index.html
@@ -42,17 +42,16 @@
             </ul>
           <!-- </div> -->
         </li>
-        <li>      <div id="info">
-          <!-- <a href="https://twitter.com/lextheboywonder" target="_blank" class='media'><img src="icons/twitter (1).png">
-          </a> -->
-          <!-- <a href="mailto:amihalop@gmail.com" target="_top" class="media"><img src='icons/email.png'></a> -->
-          <a href="https://github.com/amihalopoulos" target="_blank" class='media'><img src="icons/github_alt.png">
-          </a>
-          <a href="http://www.linkedin.com/pub/alexander-mihalopoulos/5b/12/3b7/" target='_blank' class='media'><img src='icons/linkedin (1).png'>
-          </a>
-          <a href="http://www.google.com/+AlexanderMihalopoulos" target='_blank' class='media'><img src='icons/google_plus.png'>
-          </a>
-      </div></li>
+        <li>
+          <div id="info">
+            <a href="https://github.com/amihalopoulos" target="_blank" class='media'><img src="icons/github_alt.png">
+            </a>
+            <a href="http://www.linkedin.com/pub/alexander-mihalopoulos/5b/12/3b7/" target='_blank' class='media'><img src='icons/linkedin (1).png'>
+            </a>
+            <a href="http://www.google.com/+AlexanderMihalopoulos" target='_blank' class='media'><img src='icons/google_plus.png'>
+            </a>
+          </div>
+        </li>
 
       </ul>
 
@@ -66,15 +65,7 @@
     <h1>hello.</h1>
   </div>
   <div class="list">
-    <!-- <p><a href="./pages/2048.html">2048</a></p>
-    <p><a href="http://infomys.herokuapp.com">Infomys Strength Tracker</a></p>
-    <p><a href="./mines2/index.html">Minesweeper</a></p>
-    <p><a href="http://tubegenius.herokuapp.com">TubeGenius</a></p> -->
     <div id="container">
-      <!-- <div id="prev1">
-        <h1> previous </h1>
-      </div> -->
-      <!-- <div id="dots_wrapper"> -->
       <ul id="images">
         <li id="0" class="car selected">
           <div class="img">
@@ -124,19 +115,8 @@
             </div>
           </div>
         </li>
-      <!--                      <li id="4" class="car hidden">
-      <div class="img">
-      <img class="img" src="icons/2048.png">
-      <div class="bottom">
-      Hello this is some text about this image Hello this is some text about this image Hello this is some text about this image
-      </div>
-      </div>
-      </li> -->
       </ul>
     </div>
-<!--     <div id="nxt1">
-      <h1> next </h1>
-    </div> -->
     <div id="wrapper">
       <span id="prev"><</span>
       <ul id="dots">
@@ -144,13 +124,10 @@
         <li> </li>
         <li> </li>
         <li> </li>
-        <!-- <li> </li> -->
       </ul>
       <span id="nxt">></span>
     </div>
   </div>
-
-
 
 </body>
 
